--- a/data/saas/dataset/segment_dataset.yml
+++ b/data/saas/dataset/segment_dataset.yml
@@ -1,5 +1,5 @@
 dataset:
-  - fides_key: segment_connector_example
+  - fides_key: <instance_fides_key>
     name: Segment Dataset
     description: A sample dataset representing the Segment connector for Fidesops
     collections:
