--- a/data/saas/config/sentry_config.yml
+++ b/data/saas/config/sentry_config.yml
@@ -1,5 +1,5 @@
 saas_config:
-  fides_key: sentry_connector
+  fides_key: <instance_fides_key>
   name: Sentry SaaS Config
   type: sentry
   description: A sample schema representing the Sentry connector for Fidesops
@@ -44,7 +44,7 @@ saas_config:
           param_values:
             - name: organization_slug
               references:
-                - dataset: sentry_connector
+                - dataset: <instance_fides_key>
                   field: organizations.slug
                   direction: from
           postprocessors:
@@ -77,7 +77,7 @@ saas_config:
           param_values:
             - name: issue_id
               references:
-                - dataset: sentry_connector
+                - dataset: <instance_fides_key>
                   field: issues.id
                   direction: from
           body: |
@@ -94,12 +94,12 @@ saas_config:
           param_values:
             - name: organization_slug
               references:
-                - dataset: sentry_connector
+                - dataset: <instance_fides_key>
                   field: projects.organization.slug
                   direction: from
             - name: project_slug
               references:
-                - dataset: sentry_connector
+                - dataset: <instance_fides_key>
                   field: projects.slug
                   direction: from
             - name: query
@@ -118,12 +118,12 @@ saas_config:
           param_values:
             - name: organization_slug
               references:
-                - dataset: sentry_connector
+                - dataset: <instance_fides_key>
                   field: projects.organization.slug
                   direction: from
             - name: project_slug
               references:
-                - dataset: sentry_connector
+                - dataset: <instance_fides_key>
                   field: projects.slug
                   direction: from
           postprocessors:
@@ -138,7 +138,7 @@ saas_config:
               source: headers
               rel: next
     - name: person
-      after: [sentry_connector.projects]
+      after: [<instance_fides_key>.projects]
       requests:
         read:
           method: GET
@@ -151,12 +151,12 @@ saas_config:
           param_values:
             - name: organization_slug
               references:
-                - dataset: sentry_connector
+                - dataset: <instance_fides_key>
                   field: projects.organization.slug
                   direction: from
             - name: project_slug
               references:
-                - dataset: sentry_connector
+                - dataset: <instance_fides_key>
                   field: projects.slug
                   direction: from
             - name: query
