--- a/data/saas/dataset/auth0_dataset.yml
+++ b/data/saas/dataset/auth0_dataset.yml
@@ -1,5 +1,5 @@
 dataset:
-    - fides_key: auth0_connector_example
+    - fides_key: <instance_fides_key>
       name: Auth0 Dataset
       description: A sample dataset representing the Auth0 connector for Fidesops
       collections:
