--- a/data/saas/dataset/datadog_dataset.yml
+++ b/data/saas/dataset/datadog_dataset.yml
@@ -1,5 +1,5 @@
 dataset:
-  - fides_key: datadog_connector_example
+  - fides_key: <instance_fides_key>
     name: Datadog Dataset
     description: A sample dataset representing the Datadog connector for Fidesops
     collections:
