--- a/data/saas/dataset/stripe_dataset.yml
+++ b/data/saas/dataset/stripe_dataset.yml
@@ -1,5 +1,5 @@
 dataset:
-  - fides_key: stripe_connector_example
+  - fides_key: <instance_fides_key>
     name: Stripe Dataset
     description: A sample dataset representing the Stripe connector for Fidesops
     collections:
