Create a Saas Connector from a Template [#814] (#1076)
* Starting point for SaaS connector templates

* Fix imports from restructuring.

* Get happy path working for instantiate connector from template endpoint.

* Remove updating connector instances for now - out of scope.

* Test nonexistent templates, secrets validation, instance key / fides key already exists.

* Create DatasetConfigs and ConnectionConfigs instead of create_or_update in the template endpoint.  Don't save ConnectionConfig until secrets are validated.

* Add the other saas connectors to the registry and update their configs and datasets with instance_fides_key.

- Fix datadog yaml so it can be included in the saas connector registry. There was an error in how the saas config was formatted.

* Update the fides_keys in the existing saas configs and dataset yamls to have brackets around the "instance_fides_key" to indicate these will be replaced.

Update the fides_key definition to allow "<instance_fides_key>" with brackets specifically to pass validation.

* Fix a side effect on a separate endpoint that returns the types of secrets that should be supplied for a given connector.  Use the saas config type instead of the fides key for the model title. Add test verifying that fides key /instance key validation works as expected.

* - Update CHANGELOG
- Add new endpoint to postman collection
- Add drafts doc.
- Update old response body in docs for connection types.

* Replace the <instance_fides_key> with a properly formatted fides_key in the saas fixtures.

* If DatasetConfig creation fails, delete the recently created ConnectionConfig.

* Address some of the saas integration tests where I've changed the fides_key.

* Fix typos.

* Fix typo.

* Fix unrelated bug where hubspot dataset has new datacategories with user-* data categories after the fideslang update, so they would show up if the user picked a "user" data category.

* Respond to CR.

Co-authored-by: Daw

--- a/data/saas/config/logi_id_config.yml
+++ b/data/saas/config/logi_id_config.yml
@@ -1,5 +1,5 @@
 saas_config:
-  fides_key: logi_id_connector_example
+  fides_key: <instance_fides_key>
   name: Logi ID SaaS Config
   type: logi_id
   description: A sample schema representing the Logi ID connector for Fidesops
@@ -44,7 +44,7 @@ saas_config:
           param_values:
             - name: user_id
               references:
-                - dataset: logi_id_connector_example
+                - dataset: <instance_fides_key>
                   field: users.id
                   direction: from
     - name: user_claims
