--- a/data/saas/dataset/logi_id_dataset.yml
+++ b/data/saas/dataset/logi_id_dataset.yml
@@ -1,5 +1,5 @@
 dataset:
-  - fides_key: logi_id_connector_example
+  - fides_key: <instance_fides_key>
     name: Logi ID Example Dataset
     description: A sample dataset representing the Logi ID connector for Fidesops
     collections:
