Prepend `ctl` to database table names (#979)
* Prepend `ctl` to database table names

* rename the tables

* fix past migrations that broke with the table name update

* update dataset.yml, fix isort issue

* update the changelog

* small dataset fix

* update the indexes

* fix a misspelled index rename

* Merge alembic heads

* Format autogenerated alembic file

* Add a more useful alembic message

Co-authored-by: Allison King <allisonjuliaking@gmail.com>

--- a/.fides/dataset.yml
+++ b/.fides/dataset.yml
@@ -144,7 +144,7 @@ dataset:
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
       retention: null
       fields: null
-  - name: data_categories
+  - name: ctl_data_categories
     description: null
     data_categories: null
     data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
@@ -220,7 +220,7 @@ dataset:
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
       retention: null
       fields: null
-  - name: data_qualifiers
+  - name: ctl_data_qualifiers
     description: null
     data_categories: null
     data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
@@ -296,7 +296,7 @@ dataset:
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
       retention: null
       fields: null
-  - name: data_subjects
+  - name: ctl_data_subjects
     description: null
     data_categories: null
     data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
@@ -381,7 +381,7 @@ dataset:
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
       retention: null
       fields: null
-  - name: data_uses
+  - name: ctl_data_uses
     description: null
     data_categories: null
     data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
@@ -493,7 +493,7 @@ dataset:
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
       retention: null
       fields: null
-  - name: datasets
+  - name: ctl_datasets
     description: null
     data_categories: null
     data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
@@ -635,7 +635,7 @@ dataset:
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
       retention: null
       fields: null
-  - name: evaluations
+  - name: ctl_evaluations
     description: null
     data_categories: null
     data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
@@ -814,7 +814,7 @@ dataset:
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
       retention: null
       fields: null
-  - name: organizations
+  - name: ctl_organizations
     description: null
     data_categories: null
     data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
@@ -921,7 +921,7 @@ dataset:
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
       retention: null
       fields: null
-  - name: policies
+  - name: ctl_policies
     description: null
     data_categories: null
     data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
@@ -990,7 +990,7 @@ dataset:
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
       retention: null
       fields: null
-  - name: registries
+  - name: ctl_registries
     description: null
     data_categories: null
     data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
@@ -1052,7 +1052,7 @@ dataset:
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
       retention: null
       fields: null
-  - name: systems
+  - name: ctl_systems
     description: null
     data_categories: null
     data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
